--- a/breakPointApp/Base.lproj/Main.storyboard
+++ b/breakPointApp/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                         <state key="normal" image="compose"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6D-zS-9Bc">
-                                        <rect key="frame" x="110" y="28" width="100" height="30"/>
+                                        <rect key="frame" x="110.5" y="28" width="100" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="2PC-08-QkO"/>
                                             <constraint firstAttribute="height" constant="30" id="62e-SO-Ayj"/>
@@ -116,7 +116,7 @@
                                         <state key="normal" image="compose"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Groups" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQ5-KK-xCC">
-                                        <rect key="frame" x="110" y="28" width="100" height="30"/>
+                                        <rect key="frame" x="110.5" y="28" width="100" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="mcL-kJ-1Pf"/>
                                             <constraint firstAttribute="height" constant="30" id="vwK-wv-mN8"/>
@@ -193,19 +193,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Via-Kb-1zn" customClass="ShadowView" customModule="breakPointApp" customModuleProvider="target">
-                                <rect key="frame" x="24" y="122.5" width="272" height="323"/>
+                                <rect key="frame" x="30" y="122.5" width="260" height="323"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="atp-Iw-E2x">
-                                        <rect key="frame" x="20" y="20" width="232" height="205"/>
+                                        <rect key="frame" x="20" y="20" width="220" height="205"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMF-g8-xRx">
-                                                <rect key="frame" x="0.0" y="0.0" width="232" height="34"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="220" height="34"/>
                                                 <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="20"/>
                                                 <color key="textColor" red="0.2705891405411765" green="0.74373563617058824" blue="0.73962162990196079" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4vO-IQ-A3R">
-                                                <rect key="frame" x="0.0" y="44" width="232" height="48.5"/>
+                                                <rect key="frame" x="0.0" y="44" width="220" height="48.5"/>
                                                 <color key="backgroundColor" red="0.2627450980392157" green="0.35686274509803922" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="49" id="AMZ-Nm-LCb"/>
@@ -214,9 +214,12 @@
                                                 <state key="normal" title="Login with FB">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="facBookSignInBtnWasPressed:" destination="3UX-6H-upW" eventType="touchUpInside" id="eqd-Ks-6yz"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZL-IQ-5fy">
-                                                <rect key="frame" x="0.0" y="102.5" width="232" height="49"/>
+                                                <rect key="frame" x="0.0" y="102.5" width="220" height="49"/>
                                                 <color key="backgroundColor" red="0.80784313725490198" green="0.32941176470588235" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="49" id="5Fu-h9-h7z"/>
@@ -225,9 +228,12 @@
                                                 <state key="normal" title="Login with G+">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="googleSignInBtnWasPressed:" destination="3UX-6H-upW" eventType="touchUpInside" id="YJf-wv-dUB"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPw-w5-vdL">
-                                                <rect key="frame" x="0.0" y="161.5" width="232" height="43.5"/>
+                                                <rect key="frame" x="0.0" y="161.5" width="220" height="43.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="0.27058914049999999" green="0.74373563620000005" blue="0.73962162990000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -241,11 +247,10 @@
                                     <constraint firstAttribute="height" constant="323" id="XE1-7e-9gj"/>
                                     <constraint firstAttribute="trailing" secondItem="atp-Iw-E2x" secondAttribute="trailing" constant="20" id="jSh-qk-u3z"/>
                                     <constraint firstItem="atp-Iw-E2x" firstAttribute="leading" secondItem="Via-Kb-1zn" secondAttribute="leading" constant="20" id="ju5-lx-gww"/>
-                                    <constraint firstAttribute="width" constant="272" id="pa4-cW-YYY"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUN-Vc-jLb">
-                                <rect key="frame" x="44" y="340" width="232" height="49"/>
+                                <rect key="frame" x="44" y="339.5" width="232" height="49"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="49" id="H6g-Vj-Q6F"/>
                                     <constraint firstAttribute="width" constant="232" id="XBZ-gs-z4a"/>
@@ -253,13 +258,18 @@
                                 <state key="normal" title="  By Email" image="emailIcon">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="EmailSignInBtnWasPressed:" destination="3UX-6H-upW" eventType="touchUpInside" id="U2t-1Z-BlV"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="c1x-eX-Bdb" firstAttribute="trailing" secondItem="Via-Kb-1zn" secondAttribute="trailing" constant="30" id="7U9-w9-e45"/>
                             <constraint firstItem="ERO-EM-6Nc" firstAttribute="leading" secondItem="c1x-eX-Bdb" secondAttribute="leading" id="Ccf-hF-nJe"/>
                             <constraint firstItem="ERO-EM-6Nc" firstAttribute="trailing" secondItem="c1x-eX-Bdb" secondAttribute="trailing" id="GrV-rz-6un"/>
                             <constraint firstItem="XUN-Vc-jLb" firstAttribute="top" secondItem="HPw-w5-vdL" secondAttribute="bottom" constant="-7.5" id="OGr-Da-bB1"/>
+                            <constraint firstItem="Via-Kb-1zn" firstAttribute="leading" secondItem="c1x-eX-Bdb" secondAttribute="leading" constant="30" id="TEf-t0-nj8"/>
                             <constraint firstItem="XUN-Vc-jLb" firstAttribute="leading" secondItem="c1x-eX-Bdb" secondAttribute="leading" constant="44" id="VVx-Ep-oNw"/>
                             <constraint firstItem="Z0W-4N-fyU" firstAttribute="top" secondItem="c1x-eX-Bdb" secondAttribute="top" constant="12" id="f7z-X0-xkc"/>
                             <constraint firstItem="c1x-eX-Bdb" firstAttribute="trailing" secondItem="XUN-Vc-jLb" secondAttribute="trailing" constant="44" id="hh7-gG-Sxp"/>
@@ -325,7 +335,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NxU-e6-zy4">
-                                <rect key="frame" x="103" y="248" width="115" height="45"/>
+                                <rect key="frame" x="102.5" y="248" width="115" height="45"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="115" id="2rK-SY-qNt"/>
@@ -335,29 +345,40 @@
                                 <state key="normal" title="Sign in ">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="SignInBtnWasPressed:" destination="Na0-nj-TZK" eventType="touchUpInside" id="1vV-wC-QVe"/>
+                                </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="close" translatesAutoresizingMaskIntoConstraints="NO" id="zLo-hl-Dlp">
-                                <rect key="frame" x="16" y="20" width="20" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7Y-Xx-SkP">
+                                <rect key="frame" x="16" y="20" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="nEx-3u-T7c"/>
-                                    <constraint firstAttribute="width" constant="20" id="rvx-ta-45l"/>
+                                    <constraint firstAttribute="height" constant="30" id="4vv-2X-MB9"/>
+                                    <constraint firstAttribute="width" constant="30" id="kh5-hT-xQE"/>
                                 </constraints>
-                            </imageView>
+                                <state key="normal" image="close"/>
+                                <connections>
+                                    <action selector="closeBtnWasPressed:" destination="Na0-nj-TZK" eventType="touchUpInside" id="yeV-Up-s5x"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="XHU-nX-MjC" firstAttribute="centerX" secondItem="wN1-0G-EI9" secondAttribute="centerX" id="2Tn-BC-1EC"/>
-                            <constraint firstItem="zLo-hl-Dlp" firstAttribute="top" secondItem="qbg-cG-oBp" secondAttribute="top" id="7sY-Jh-pH3"/>
                             <constraint firstItem="XHU-nX-MjC" firstAttribute="top" secondItem="Qbw-24-Wi7" secondAttribute="bottom" constant="24" id="DON-qU-oC5"/>
+                            <constraint firstItem="X7Y-Xx-SkP" firstAttribute="leading" secondItem="qbg-cG-oBp" secondAttribute="leading" constant="16" id="F1V-P3-kTC"/>
                             <constraint firstItem="Qbw-24-Wi7" firstAttribute="top" secondItem="qbg-cG-oBp" secondAttribute="top" constant="26" id="USv-dU-ceh"/>
                             <constraint firstItem="NxU-e6-zy4" firstAttribute="top" secondItem="XHU-nX-MjC" secondAttribute="bottom" constant="24" id="Zea-qJ-t6t"/>
+                            <constraint firstItem="X7Y-Xx-SkP" firstAttribute="top" secondItem="qbg-cG-oBp" secondAttribute="top" id="eJQ-4w-UDV"/>
                             <constraint firstItem="XHU-nX-MjC" firstAttribute="top" secondItem="Qbw-24-Wi7" secondAttribute="bottom" constant="24" id="iK9-6M-EbO"/>
                             <constraint firstItem="Qbw-24-Wi7" firstAttribute="centerX" secondItem="wN1-0G-EI9" secondAttribute="centerX" id="lji-Vy-UhD"/>
                             <constraint firstItem="NxU-e6-zy4" firstAttribute="centerX" secondItem="wN1-0G-EI9" secondAttribute="centerX" id="vvG-Zr-Ahs"/>
-                            <constraint firstItem="zLo-hl-Dlp" firstAttribute="leading" secondItem="qbg-cG-oBp" secondAttribute="leading" constant="16" id="zgH-i4-UJf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qbg-cG-oBp"/>
                     </view>
+                    <connections>
+                        <outlet property="EmailField" destination="2Pr-za-T8E" id="iT1-zh-GKl"/>
+                        <outlet property="PasswordField" destination="UGD-0m-wOm" id="7CI-v9-dFY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kjG-Rm-1jz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
